--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.22.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-aos": "^1.0.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
