--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.1",
     "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
     "query-string": "^8.1.0",
