--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-aos": "^1.0.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-id-swiper": "^4.0.0",
