--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-id-swiper": "^4.0.0",
+    "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
+    "react-tabs": "^6.0.1",
     "swiper": "^9.3.2",
     "swiper-react": "^1.0.0"
   },
