--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-id-swiper": "^4.0.0",
