--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "@tanstack/react-query": "^4.29.12",
     "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
     "query-string": "^8.1.0",
