--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.1",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2",
     "swiper-react": "^1.0.0"
   },
